src/test/deca/syntax/valid/personal/class_with_fields.deca
// Description:
//    test minimaliste pour testé si le parseur déclare bien les attribus des class
//
// Resultats:
//
//
//
// Historique:
//    cree le 14/01/2025

class A{
   int x=3;
   float y;
   protected boolean b;
}

